public/stylesheets/bizzle/bizzle-classes.css
/* The core classes of the Bizzle style */

.chat_message {
  padding: 10px;
  margin-bottom: 7px;
}

.chat_message .user {
  vertical-align: middle;
  width: 19%;
  font-size: medium;
}

.chat_message .context {
  vertical-align: middle;
  width: 18%;
  font-size: medium;
}

.chat_message .message {
  vertical-align: middle;
  white-space: pre-wrap;
  width: 56%;
  font-size: medium;
}

.chat_message .timestamp {
  text-align: right;
  vertical-align: middle;
  width: 7%;
  font-size: medium;
}

.username {
  margin-top: 5px;
  padding-left: 8px;
  padding-right: 15px;
  height: 30px;
  width: 100%;
  display: table;
}

.username .username_inner {
  display: table-cell;
  vertical-align: middle;
  text-align: left;
}

.username_plain {
  background: #347999 url('/assets/images/nameplate-plain.png') no-repeat;
  background-size: cover;
}

.username_selected {
  background: #347999 url('/assets/images/nameplate-selected.png') no-repeat;
  background-size: cover;
}

.username_plain:hover {
  background-image: url('/assets/images/nameplate-hover.png');
}

.username_text {
  vertical-align: middle;
  font-size: medium;
}

.top_text {
  font-size: medium;
}

.agent_type_text {
  font-size: medium;
  color: #FFFFFF;
  vertical-align: middle;
  text-align: center;
}

.main_input {
  vertical-align: middle;
  padding-left: 10px;
  padding-right: 10px;
  width: 94%;
  font-size: medium;
  color: black
}

.inner_box {
  padding: 20px;
  margin: 15px;
  overflow: hidden;
}

.rounded {
  border-radius: 10px;
}

.scrollable {
  height: 100%;
  min-height: 100%;
  overflow: auto;
}

.spacy_column {
  border-spacing: 10px;
  border-collapse: collapse;
}

/* Firefox only! */
@-moz-document url-prefix() {
  .scrollable {
    height: 1px;
    min-height: 100%;
    overflow: auto;
  }
}

.not_full_height {
  height: 95%;
  min-height: 95%;
}

.full_height {
  height: 100%;
  min-height: 100%;
}

.hor_centered {
  margin-left: auto;
  margin-right: auto;
}

.username_box {
  width: 55%;
}

.login_button {
  width: 32%;
}

.topbar .btn {
  border: 0;
}

.topbar p {
  color: #888;
}

.core_content_box {
  width: 60%;
}

.content {
  padding: 20px;
  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
  border-radius: 0 0 6px 6px;
  box-shadow: 0 1px 2px rgba(0,0,0,.15);
  min-height: 100%;
  height: 100%;
}

